# TrackCast

./: .gitignore  README.md  app.py  pyproject.toml  spot.py  track_manager.py  tray_app.py
.github/workflows/: main.yml
auth/: spotify_auth.py  spotify_cred.py  yandex_auth.py
src/trackcast/: app.py  track_manager.py  tray_app.py
src/trackcast/auth/: spotify_auth.py
src/trackcast/services/: spotify.py  yandex.py
src/trackcast/web/: script.js  style.css
src/trackcast/web/fetch/: index.html  style.css
web/: widget.html
