[project]
name = "TrackCast"
version = "1.0.0"
description = "App, that allows to display your current playing song from Spotify and Yandex Music to OBS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "keyring>=25.7.0",
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
    "spotipy>=2.25.2",
    "uvicorn>=0.40.0",
    "yandex-music>=2.2.0",
]
